# cpu_raytracer

./: .gitignore  Cargo.toml  README.md
msvc/lib/32/: SDL2_gfx.lib
msvc/lib/64/: SDL2_gfx.lib
src/: camera.rs  light.rs  main.rs  material.rs  ray.rs  renderer.rs  scene.rs  shape.rs  threadpool.rs  vector.rs
src/material/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/math/: matrix.rs  mod.rs  vector.rs
