[package]
name = "cpu_raytracer"
version = "0.1.0"
authors = ["jschouls <Joris.schouls@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
opt-level = 3

[features]

draw-debugger = []

# For testing
[dev-dependencies]
assert_approx_eq = "1.1.0"

[dependencies]
rand = "0.7.3"
png = "0.16.6"
libc = "0.2.71"

